force-app/main/default/objects/DepartmentMaster__c/DepartmentMaster__c.object-meta.xml
<CustomObject>
    <label>部署マスタ</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>部署マスタ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>