force-app/main/default/objects/DepartmentMaster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>部署マスタ</relationshipLabel>
    <relationshipName>AccountDepartmentMaster</relationshipName>
    <type>Lookup</type>
</CustomField>