force-app/main/default/objects/DepartmentMaster__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>トップ層</fullName>
            </value>
            <value>
                <fullName>プロジェクト統括・推進</fullName>
            </value>
            <value>
                <fullName>基盤構築</fullName>
            </value>
            <value>
                <fullName>作業所</fullName>
            </value>
            <value>
                <fullName>施工部門</fullName>
            </value>
            <value>
                <fullName>技術・設計部門</fullName>
            </value>
            <value>
                <fullName>コスト管理部門</fullName>
            </value>
            <value>
                <fullName>品質管理部門</fullName>
            </value>
            <value>
                <fullName>セキュリティ部門</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>