force-app/main/default/objects/DepartmentMaster__c/fields/HeadOffice__c.field-meta.xml
<CustomField>
    <fullName>HeadOffice__c</fullName>
    <label>本支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>