force-app/main/default/objects/DepartmentMaster__c/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <label>本部</label>
    <length>255</length>
    <type>Text</type>
</CustomField>