force-app/main/default/objects/DepartmentMaster__c/fields/KeyDepartment__c.field-meta.xml
<CustomField>
    <fullName>KeyDepartment__c</fullName>
    <label>キー部署</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>決裁-本社</fullName>
            </value>
            <value>
                <fullName>決裁-支店</fullName>
            </value>
            <value>
                <fullName>決裁-現場</fullName>
            </value>
            <value>
                <fullName>DX推進部門</fullName>
            </value>
            <value>
                <fullName>DX利活用部門</fullName>
            </value>
            <value>
                <fullName>お友達部門</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>