force-app/main/default/objects/DepartmentMaster__c/fields/LeadCheck__c.field-meta.xml
<CustomField>
    <fullName>LeadCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード</label>
    <type>Checkbox</type>
</CustomField>